2009-12-10  Michael Wiegand <michael.wiegand@intevation.de>

	* src/gsad.c (exec_omp_get): Increased maximum result count.

2009-12-09  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* src/html/header.m4: Adjusted menu to dynamic pages. (use plural
	"Scan Configs").

2009-12-08  Michael Wiegand <michael.wiegand@intevation.de>

	Post release version bump.

	* VERSION: Set to 0.8.3.SVN.

	* CMakeLists.txt: Updated CPACK_PACKAGE_VERSION_PATCH.

	* src/html/src/about.htm4: Updated.

2009-12-08  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the gsa 0.8.2 release.

	* VERSION: Set to 0.8.2.

	* CMakeLists.txt: Updated CPACK_PACKAGE_VERSION_PATCH.

	* src/html/src/about.htm4: Updated.

2009-12-07  Michael Wiegand <michael.wiegand@intevation.de>

	Fixed a bug which caused the GSA to hang or crash when editing the
	configuration for a family containing ":".

	* src/gsad.c (init_validator): Added / fixed regular expressions for
	family names.
	(exec_omp_post): Repaired validator usage.

2009-12-07  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* CMakeLists.txt: Improved checks for pkg-config and libopenvas-config,
	Intention was to first collect missing tools and then report on them to
	avoid configure-install cycles.

2009-12-07  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* CMakeLists.txt: Added checks for pkg-config and libopenvas-config.

2009-12-03  Michael Wiegand <michael.wiegand@intevation.de>

	Added initial NVT feed synchronization support.

	* src/gsad.c (init_validator): Mark get_feed and sync_feed as valid
	commands.
	(exec_omp_post): Add handling of sync_feed command.
	(exec_omp_get): Add handling of get_feed command.

	* src/gsad_oap.c: Added functions for getting the description of a feed
	and for synchronization with a feed.
	(get_feed_oap, sync_feed_oap): New.

	* src/gsad_oap.h: Updated header.

	* src/html/src/gsad.xsl, src/html/src/help/contents.htm4,
	src/html/header.m4: Add menu item for feed management.
