@@ -1,3 +1,8 @@
+2009-12-15  Matthew Mundell <matthew.mundell@intevation.de>
+
+	* src/gsad.c: Correct doc.  Neaten comments.  Format strcmp conditionals
+	consistently.
+
 2009-12-10  Michael Wiegand <michael.wiegand@intevation.de>
 
 	* src/gsad.c (exec_omp_get): Increased maximum result count.
@@ -103,7 +108,7 @@
 	(request_handler): Use "const" where possible. Introduce
 	oap_cgi_base. Improve redirect for non-base URLs. Redirect
 	"/login/". Fix memleak.
-	(gsad_init): Improve documentation. Call init_validator. 
+	(gsad_init): Improve documentation. Call init_validator.
 
 2009-12-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
